--- a/package.json
+++ b/package.json
@@ -19,11 +19,16 @@
     "@types/multer": "^2.0.0",
     "@types/node": "^25.2.2",
     "@types/nodemailer": "^7.0.9",
+    "@types/pg": "^8.16.0",
+    "prisma": "^7.3.0",
     "ts-node-dev": "^2.0.0",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3"
   },
   "dependencies": {
+    "@prisma/adapter-pg": "^7.3.0",
+    "@prisma/client": "^7.3.0",
+    "bcryptjs": "^3.0.3",
     "cloudinary": "^2.9.0",
     "cors": "^2.8.6",
     "dotenv": "^17.2.4",
@@ -31,8 +36,8 @@
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
     "multer": "^2.0.2",
-    "mysql2": "^3.16.3",
     "nodemailer": "^8.0.1",
+    "pg": "^8.18.0",
     "zod": "^4.3.6"
   }
 }
