--- a/package.json
+++ b/package.json
@@ -34,10 +34,12 @@
     "dotenv": "^17.2.4",
     "ejs": "^4.0.1",
     "express": "^5.2.1",
+    "google-auth-library": "^10.5.0",
     "jsonwebtoken": "^9.0.3",
     "multer": "^2.0.2",
     "nodemailer": "^8.0.1",
     "pg": "^8.18.0",
+    "slugify": "^1.6.6",
     "zod": "^4.3.6"
   }
 }
